# mkdocstrings-graphql

./: .copier-answers.yml  .gitignore  Makefile  README.md  duties.py  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  publish.yml  release.yml
config/: ruff.toml
config/vscode/: launch.json
docs/.overrides/partials/: comments.html
docs/reference/: api.md
docs/usage/: customization.md
docs/usage/configuration/: general.md  headings.md
scripts/: gen_credits.py  griffe_extensions.py  make.py  mkdocs_hooks.py
src/mkdocstrings_handlers/graphql/: __init__.py
src/mkdocstrings_handlers/graphql/_internal/: config.py  debug.py  docstring_models.py  enum.py  error.py  expressions.py  handler.py  loader.py  models.py  render.py
src/mkdocstrings_handlers/graphql/templates/material/: operation.html.jinja
src/mkdocstrings_handlers/graphql/templates/material/_base/: data.html.jinja  docstring.html.jinja  expression.html.jinja  gql_object.html.jinja  gql_operation.html.jinja  operation.html.jinja  signature.html.jinja
src/mkdocstrings_handlers/graphql/templates/material/_base/docstring/: returns.html.jinja
src/mkdocstrings_handlers/graphql/templates/material/docstring/: arguments.html.jinja
tests/: conftest.py  test_api.py  test_handler.py  test_loader.py  test_themes.py
tests/__snapshots__/: test_loader.ambr
tests/fixtures/schema/: schema.graphql
